// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Autocomplete Airport 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    style={
      Object {
        "width": 244,
      }
    }
  >
    <div
      className="styled-l0xg5-0 bHNODb"
    >
      <div
        className="react-autosuggest__container"
      >
        <div
          className="styled__Container-b62739-0 bGzhhM"
        >
          <textarea
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={false}
            aria-owns="react-autowhatever-1"
            autoCapitalize="sentences"
            autoComplete="off"
            autoFocus={true}
            className="react-autosuggest__input styled__Input-b62739-1 gxKfbn"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Туда"
            role="combobox"
            rows="1"
            type="text"
            value=""
            wrap="off"
          />
          <div
            className="airport-input__geo styled__Geo-b62739-2 iCsdMJ"
          >
            <div
              className="styled__ValuePlaceholder-b62739-4 gmWBAn"
            >
              
            </div>
            
            
          </div>
          <div
            className="styled__Code-b62739-6 hIaaya"
          >
            
          </div>
        </div>
        <div
          className="react-autosuggest__suggestions-container"
          id="react-autowhatever-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Blocks FilterSection 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    style={
      Object {
        "width": 252,
      }
    }
  >
    <section
      className="FilterSection__Section-jqj5fm-0 jZsUiy"
    >
      <header
        className="FilterSection__Header-jqj5fm-1 iCySnU"
      >
        <div>
          Пересадки
        </div>
        <div>
          Сбросить
        </div>
      </header>
      <div
        className="FilterSection__Content-jqj5fm-2 cYnZeA"
      >
        <div>
          <div>
            <label
              className="styled__CheckboxLabel-s18rktfd-4 hQGnZs"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox styled__StyledCheckbox-s18rktfd-2 gHdxdd"
                disabled={false}
              >
                <input
                  checked={false}
                  className="styled__CheckboxInput-s18rktfd-0 DfTPu"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text styled__LabelText-s18rktfd-3 lhDSgp"
                disabled={false}
              >
                Без пересадок
              </span>
            </label>
          </div>
          <div>
            <label
              className="styled__CheckboxLabel-s18rktfd-4 hQGnZs"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox styled__StyledCheckbox-s18rktfd-2 gHdxdd"
                disabled={false}
              >
                <input
                  checked={false}
                  className="styled__CheckboxInput-s18rktfd-0 DfTPu"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text styled__LabelText-s18rktfd-3 lhDSgp"
                disabled={false}
              >
                1 пересадка
              </span>
            </label>
          </div>
          <div>
            <label
              className="styled__CheckboxLabel-s18rktfd-4 hQGnZs"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox styled__StyledCheckbox-s18rktfd-2 gHdxdd"
                disabled={false}
              >
                <input
                  checked={false}
                  className="styled__CheckboxInput-s18rktfd-0 DfTPu"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text styled__LabelText-s18rktfd-3 lhDSgp"
                disabled={false}
              >
                2 и более
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        className="rc-collapse"
        style={undefined}
      >
        <div
          className="rc-collapse-item FilterSection__PanelWrapper-jqj5fm-6 gHLSoC Panel__PanelStyled-s1a3esbz-0 ggPUhp"
          style={undefined}
        >
          <div
            aria-expanded={false}
            className="rc-collapse-header"
            onClick={[Function]}
            role="tab"
          >
            <div
              className="FilterSection__PanelHeader-jqj5fm-4 dqJvCp"
            >
              <div
                className="stories__WithBorder-g81prq-1 cRcnFk"
              >
                Пересадки
              </div>
              <svg
                className="FilterSection__IconWrapper-jqj5fm-5 eITzIf icon-inherit-color icons__IconSvg-s1jp6x8u-0 hfCDLm"
                size="xxsmall"
                style={undefined}
              >
                <use
                  xlinkHref="#kb_arrow-down"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Blocks Styled Tabs 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    className="rc-tabs rc-tabs-top"
    style={Object {}}
  >
    <div
      className={undefined}
    >
      <span
        aria-disabled={undefined}
        className="Tab-ig7nzo-0 ifoJXu"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        1. Бронирование
      </span>
      <span
        aria-disabled={undefined}
        className="Tab-ig7nzo-0 iKsIYW"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        2. Оплата
      </span>
      <span
        aria-disabled={undefined}
        className="Tab-ig7nzo-0 ifoJXu"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        3. Получение билета
      </span>
    </div>
    <div
      className="rc-tabs-content rc-tabs-content-no-animated"
      style={undefined}
    >
      <div
        aria-hidden="true"
        className="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style={undefined}
      />
      <div
        aria-hidden="false"
        className="rc-tabs-tabpane rc-tabs-tabpane-active"
        role="tabpanel"
        style={undefined}
      >
        Second tab
      </div>
      <div
        aria-hidden="true"
        className="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Box Defalut 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    className="box__Box-s1wcnbka-0 beLQPt"
  >
    <p>
      box content
    </p>
  </div>
</div>
`;

exports[`Storyshots Buttons Default 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <button
    className="no-global styled__StyledButton-ex03wx-0 dQQLDr"
    disabled={undefined}
    size="normal"
  >
    <span
      className="styled__StyledButtonText-ex03wx-1 dKGkpe"
      size="normal"
    >
      Авиабилеты
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Disabled 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <button
    className="no-global styled__StyledButton-ex03wx-0 ftrpfD"
    disabled={true}
    size="normal"
  >
    <span
      className="styled__StyledButtonText-ex03wx-1 dKGkpe"
      size="normal"
    >
      Cake is a lie
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Icon-only button 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <button
    className="no-global styled__StyledButton-ex03wx-0 rDsAj"
    disabled={undefined}
    size="large"
  >
    <span
      className="styled__IconWrap-ex03wx-2 kuFwcV"
      size="large"
    >
      <svg
        className="icons__IconSvg-s1jp6x8u-0 cjKTUb"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_carrot_monochrome"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Sizes 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <button
    className="no-global styled__StyledButton-ex03wx-0 wIQBX"
    disabled={undefined}
    size="large"
  >
    <span
      className="styled__StyledButtonText-ex03wx-1 dKGkpe"
      size="large"
    >
      Бальшой
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons With icons 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <button
    className="no-global styled__StyledButton-ex03wx-0 epXSno"
    disabled={undefined}
    size="normal"
  >
    <span
      className="styled__IconWrap-ex03wx-2 kXNdNJ"
      size="normal"
    >
      <svg
        className="icons__IconSvg-s1jp6x8u-0 cjKTUb"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_plane"
        />
      </svg>
    </span>
    <span
      className="styled__StyledButtonText-ex03wx-1 cYmdcq"
      size="normal"
    >
      Авиабилеты
    </span>
    <span
      className="styled__IconWrap-ex03wx-2 kXNdNJ"
      size="normal"
    >
      <svg
        className="icons__IconSvg-s1jp6x8u-0 cjKTUb"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_hand-baggage"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Checkbox default 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div>
    <label
      className="styled__CheckboxLabel-s18rktfd-4 hQGnZs"
      disabled={false}
    >
      <span
        checked={false}
        className="checkbox styled__StyledCheckbox-s18rktfd-2 gHdxdd"
        disabled={false}
      >
        <input
          checked={false}
          className="styled__CheckboxInput-s18rktfd-0 DfTPu"
          disabled={false}
          name=""
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="label-text styled__LabelText-s18rktfd-3 lhDSgp"
        disabled={false}
      >
        Авиабилеты
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox disabled 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <label
    className="styled__CheckboxLabel-s18rktfd-4 klWYAd"
    disabled={true}
  >
    <span
      checked={false}
      className="checkbox styled__StyledCheckbox-s18rktfd-2 FoFLM"
      disabled={true}
    >
      <input
        checked={false}
        className="styled__CheckboxInput-s18rktfd-0 DfTPu"
        disabled={true}
        name=""
        onChange={[Function]}
        type="checkbox"
      />
    </span>
    <span
      className="label-text styled__LabelText-s18rktfd-3 gffORY"
      disabled={true}
    >
      Авиабилеты
    </span>
  </label>
</div>
`;

exports[`Storyshots Collapse Accordion 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item Panel__PanelStyled-s1a3esbz-0 ggPUhp"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
      </div>
      <div
        className="rc-collapse-item Panel__PanelStyled-s1a3esbz-0 ggPUhp"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item Panel__PanelStyled-s1a3esbz-0 ggPUhp"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapse Default 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item Panel__PanelStyled-s1a3esbz-0 ggPUhp"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
      </div>
      <div
        className="rc-collapse-item Panel__PanelStyled-s1a3esbz-0 ggPUhp"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item Panel__PanelStyled-s1a3esbz-0 ggPUhp"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapse Default active panel 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item rc-collapse-item-active Panel__PanelStyled-s1a3esbz-0 ggPUhp"
        style={undefined}
      >
        <div
          aria-expanded={true}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
        <div
          className="rc-collapse-content rc-collapse-content-active"
          role="tabpanel"
        >
          <div
            className="rc-collapse-content-box"
          >
            
              A dog is a type of domesticated animal.
              Known for its loyalty and faithfulness,
              it can be found as a welcome guest in many households across the world.
            
          </div>
        </div>
      </div>
      <div
        className="rc-collapse-item Panel__PanelStyled-s1a3esbz-0 ggPUhp"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item Panel__PanelStyled-s1a3esbz-0 ggPUhp"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ControlsGroup Different controls group 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    className="styled__FlexContainer-kjsa5t-0 kiAucM"
  >
    <button
      className="no-global styled__StyledButton-ex03wx-0 hPtkp"
      disabled={undefined}
      size="large"
    >
      <span
        className="styled__StyledButtonText-ex03wx-1 dKGkpe"
        size="large"
      >
        Пойти
      </span>
    </button>
    <div
      className="styled__Container-b62739-0 kPRhrD"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="styled__Input-b62739-1 eCJLaI"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="airport-input__geo styled__Geo-b62739-2 djvYHN"
      >
        <div
          className="styled__ValuePlaceholder-b62739-4 gmWBAn"
        >
          Шереметьево
        </div>
        
        
      </div>
      <div
        className="styled__Code-b62739-6 gbIeko"
      >
        SVO
      </div>
    </div>
    <button
      className="no-global styled__StyledButton-ex03wx-0 gBXAAQ"
      disabled={undefined}
      size="large"
    >
      <span
        className="styled__StyledButtonText-ex03wx-1 dKGkpe"
        size="large"
      >
        Найти
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots ControlsGroup Inputs group 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    className="styled__FlexContainer-kjsa5t-0 kiAucM"
  >
    <div
      className="styled__Container-b62739-0 iuJudj"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="styled__Input-b62739-1 kcyhpM"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="airport-input__geo styled__Geo-b62739-2 iCsdMJ"
      >
        <div
          className="styled__ValuePlaceholder-b62739-4 gmWBAn"
        >
          Шереметьево
        </div>
        
        
      </div>
      <div
        className="styled__Code-b62739-6 gbIeko"
      >
        SVO
      </div>
    </div>
    <div
      className="styled__SwapContainer-kjsa5t-1 kwvQNh"
      onClick={[Function]}
    >
      <svg
        className="controls-group__swap styled__SwapIcon-kjsa5t-2 iHGeqS icon-inherit-color icons__IconSvg-s1jp6x8u-0 hfCDLm"
        size="xxsmall"
        style={undefined}
      >
        <use
          xlinkHref="#kb_left-right"
        />
      </svg>
    </div>
    <div
      className="styled__Container-b62739-0 gTROiX"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="styled__Input-b62739-1 fgUjhN"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        rows="1"
        value="Несуществующий город"
        wrap="off"
      />
      <div
        className="airport-input__geo styled__Geo-b62739-2 djvYHN"
      >
        <div
          className="styled__ValuePlaceholder-b62739-4 gmWBAn"
        >
          Несуществующий город
        </div>
        
        
      </div>
      <div
        className="styled__Code-b62739-6 hIaaya"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange DateRange 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    className="styled-p8glns-0 fqaHur"
  >
    <div
      className="DateInput--startDate--placeholder DateInput--endDate--placeholder"
    >
      <div
        className="DateRangePicker"
      >
        <div>
          <div
            className="DateRangePickerInput"
          >
            <div
              className="DateInput"
            >
              <input
                aria-describedby=""
                aria-label="Туда"
                autoComplete="off"
                className="DateInput__input"
                disabled={false}
                id="startDate"
                name="startDate"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Туда"
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
              
              <div
                className="DateInput__display-text"
              >
                Туда
              </div>
            </div>
            <div
              className="DateRangePickerInput__arrow"
            >
              <span />
            </div>
            <div
              className="DateInput"
            >
              <input
                aria-describedby=""
                aria-label="Обратно"
                autoComplete="off"
                className="DateInput__input"
                disabled={false}
                id="endDate"
                name="endDate"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Обратно"
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
              
              <div
                className="DateInput__display-text"
              >
                Обратно
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown Defalut 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <onClickOutside-Mock-Decorator>
    <div
      className="stories__StyledDropdown-s1csjvtb-0 AWNmw dropdown__DropdownWrapper-doekpk-0 jVydYt"
    >
      <div
        onClick={[Function]}
      >
        click to open  
        <button
          className="no-global styled__StyledButton-ex03wx-0 dQQLDr"
          disabled={undefined}
          size="normal"
        >
          <span
            className="styled__StyledButtonText-ex03wx-1 dKGkpe"
            size="normal"
          >
            click
          </span>
        </button>
      </div>
    </div>
  </onClickOutside-Mock-Decorator>
</div>
`;

exports[`Storyshots Fluid layout Aside on top with beforeSection prop 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="fluid-layout__FluidContainer-s10in2pn-0 dhRuAY"
    >
      <div
        className="fluid-layout__FluidSection-s10in2pn-1 ePBsqC"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
      <div
        className="fluid-layout__Aside-s10in2pn-2 ecKKmE"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Fluid layout Single column 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="fluid-layout__SingleFluidSection-s10in2pn-3 dgRDFo"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "background": "rgba(35, 194, 86, .4)",
            "display": "flex",
            "height": 140,
            "justifyContent": "center",
          }
        }
      >
        Main content
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Fluid layout Two columns 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="fluid-layout__FluidContainer-s10in2pn-0 dhRuAY"
    >
      <div
        className="fluid-layout__FluidSection-s10in2pn-1 ePBsqC"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
      <div
        className="fluid-layout__Aside-s10in2pn-2 cyCQaM"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FormItem default 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    className="form-item__LabelWrapper-s28x0s3-0 kiMMRD"
  >
    <label
      className="form-item__Label-s28x0s3-1 iqiNf"
      htmlFor="input"
    >
      Cake is a lie
    </label>
    <input
      id="input"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Icon Icon with fill 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <svg
    className="icons__IconSvg-s1jp6x8u-0 iOiQVa"
    size="large"
    style={undefined}
  >
    <use
      xlinkHref="#kb_checkbox"
    />
  </svg>
</div>
`;

exports[`Storyshots Input default 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    className="input__InputWrapper-rz5s2b-2 uDqsz"
    disabled={undefined}
    size="large"
  >
    <input
      className="input__StyledInput-rz5s2b-1 eGaBjV"
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
    />
  </div>
</div>
`;

exports[`Storyshots Input disabled 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    className="input__InputWrapper-rz5s2b-2 kmYCTH"
    disabled={true}
    size="large"
  >
    <input
      className="input__StyledInput-rz5s2b-1 HAVJm"
      disabled={true}
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Input error 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    className="input__InputWrapper-rz5s2b-2 jyMHpB"
    disabled={undefined}
    size="large"
  >
    <input
      className="input__StyledInput-rz5s2b-1 eGaBjV"
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
      type="text"
    />
    <span
      className="input__Error-rz5s2b-0 tTvoC"
    >
      Только латинские буквы
    </span>
  </div>
</div>
`;

exports[`Storyshots Input success 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    className="input__InputWrapper-rz5s2b-2 dQdrdv"
    disabled={undefined}
    size="large"
  >
    <input
      className="input__StyledInput-rz5s2b-1 eGaBjV"
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots PassengerPicker Defalut 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div
    className="passenger__Passenger-s1pwcak4-0 laKlMe"
  >
    <div>
      <div
        className="passenger__Title-s1pwcak4-1 iSEhdq"
      >
        Взрослые
      </div>
      <div
        className="passenger__Description-s1pwcak4-2 gHdiuo"
      >
        До 2 лет, без места
      </div>
    </div>
    <div
      className="passenger__PassangerCount-s1pwcak4-5 eLVcSH"
    >
      <span
        className="passenger__Current-s1pwcak4-3 blBDqm"
      >
        1
      </span>
      <div
        className="passenger__CountControls-s1pwcak4-6 hTcEQY"
      >
        <button
          className="no-global passenger__ButtonControl-s1pwcak4-4 cnTAIT styled__StyledButton-ex03wx-0 kmmMDm"
          disabled={true}
          onClick={[Function]}
          size="normal"
        >
          <span
            className="styled__IconWrap-ex03wx-2 kXNdNJ"
            size="normal"
          >
            <svg
              className="icons__IconSvg-s1jp6x8u-0 cjKTUb"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_minus"
              />
            </svg>
          </span>
        </button>
        <button
          className="no-global passenger__ButtonControl-s1pwcak4-4 cnTAIT styled__StyledButton-ex03wx-0 eaLRgA"
          disabled={false}
          onClick={[Function]}
          size="normal"
        >
          <span
            className="styled__IconWrap-ex03wx-2 kXNdNJ"
            size="normal"
          >
            <svg
              className="icons__IconSvg-s1jp6x8u-0 cjKTUb"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_plus"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PriceVariantsButton default 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div>
    <div
      className="price-variants-button__Root-s1hbe2xj-0 eTKdmA"
    >
      <div
        className="price-variants-button__Button-s1hbe2xj-1 kurNAq"
        onClick={[Function]}
        title="Банковской картой он-лайн"
      >
        <div
          className="price-variants-button__Content-s1hbe2xj-4 jLgfzL"
        >
          <span
            className="price-variants-button__Title-s1hbe2xj-5 bIVZvg"
          >
            Банковской картой он-лайн
          </span>
          <div>
            <svg
              className="block-icon price-variants-button__StyledIcon-s1hbe2xj-3 fHRQBy icons__IconSvg-s1jp6x8u-0 isrYoj"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_plane"
              />
            </svg>
          </div>
        </div>
        <div
          className="price-variants-button__Content-s1hbe2xj-4 jLgfzL"
        >
          <span
            className="price-variants-button__Price-s1hbe2xj-6 kEhDby"
          >
            12 234 ₽
             ₽
          </span>
        </div>
      </div>
      <span
        className="price-variants-button__Description-s1hbe2xj-2 hHSLoG"
      >
        Описание
      </span>
    </div>
    <div
      className="price-variants-button__Root-s1hbe2xj-0 eTKdmA"
    >
      <div
        className="price-variants-button__Button-s1hbe2xj-1 jAdfIE"
        onClick={[Function]}
        title="Эконом Базовый"
      >
        <div
          className="price-variants-button__Content-s1hbe2xj-4 jLgfzL"
        >
          <span
            className="price-variants-button__Title-s1hbe2xj-5 cMcDFX"
          >
            Эконом Базовый
          </span>
        </div>
        <div
          className="price-variants-button__Content-s1hbe2xj-4 jLgfzL"
        >
          <span
            className="price-variants-button__Price-s1hbe2xj-6 kEhDby"
          >
            12 234 ₽
             ₽
          </span>
          <div>
            <svg
              className="block-icon price-variants-button__StyledIcon-s1hbe2xj-3 fHRQBy icons__IconSvg-s1jp6x8u-0 isrYoj"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_hand-baggage"
              />
            </svg>
            <svg
              className="block-icon price-variants-button__StyledIcon-s1hbe2xj-3 fHRQBy icons__IconSvg-s1jp6x8u-0 isrYoj"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_exchange"
              />
            </svg>
            <svg
              className="block-icon price-variants-button__StyledIcon-s1hbe2xj-3 fHRQBy icons__IconSvg-s1jp6x8u-0 isrYoj"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_return"
              />
            </svg>
          </div>
        </div>
      </div>
      <span
        className="price-variants-button__Description-s1hbe2xj-2 hHSLoG"
      >
        Описание
      </span>
    </div>
    <div
      className="price-variants-button__Root-s1hbe2xj-0 eTKdmA"
    >
      <div
        className="price-variants-button__Button-s1hbe2xj-1 jAdfIE"
        onClick={[Function]}
        title="Эконом"
      >
        <div
          className="price-variants-button__Content-s1hbe2xj-4 jLgfzL"
        >
          <span
            className="price-variants-button__Title-s1hbe2xj-5 cMcDFX"
          >
            Эконом
          </span>
        </div>
        <div
          className="price-variants-button__Content-s1hbe2xj-4 jLgfzL"
        >
          <span
            className="price-variants-button__Price-s1hbe2xj-6 kEhDby"
          >
            12 234 ₽
             ₽
          </span>
          <div>
            <svg
              className="block-icon price-variants-button__StyledIcon-s1hbe2xj-3 fHRQBy icons__IconSvg-s1jp6x8u-0 isrYoj"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_hand-baggage"
              />
            </svg>
            <svg
              className="block-icon price-variants-button__StyledIcon-s1hbe2xj-3 fHRQBy icons__IconSvg-s1jp6x8u-0 isrYoj"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_exchange"
              />
            </svg>
            <svg
              className="block-icon price-variants-button__StyledIcon-s1hbe2xj-3 fHRQBy icons__IconSvg-s1jp6x8u-0 isrYoj"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_return"
              />
            </svg>
          </div>
        </div>
      </div>
      <span
        className="price-variants-button__Description-s1hbe2xj-2 hHSLoG"
      >
        Описание
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Utils Responsive only 1`] = `
<div
  className="theme-provider__GlobalStylesScope-s17r9674-0 czImMK"
>
  <div>
    <div
      className="responsive-only__DesktopOnly-s11p3d4h-0 gnSESC"
    >
      <div
        className="stories__StoryTip-s1grnup6-0 bLJLQD"
      >
        Desktop
      </div>
    </div>
    <div
      className="responsive-only__HandheldOnly-s11p3d4h-3 erZPdu"
    >
      <div
        className="sc-bdVaJa DRdhs"
      >
        Handheld
      </div>
    </div>
    <div
      className="responsive-only__TabletOnly-s11p3d4h-2 kauEFp"
    >
      <div
        className="sc-bwzfXH bCScSi"
      >
        Tablet
      </div>
    </div>
    <div
      className="responsive-only__MobileOnly-s11p3d4h-1 jRgQuy"
    >
      <div
        className="sc-htpNat iwGFdx"
      >
        Mobile
      </div>
    </div>
    <div
      className="responsive-only__NotMobileOnly-s11p3d4h-4 iaZQQb"
    >
      <div
        className="sc-bxivhb htfAcQ"
      >
        Not mobile
      </div>
    </div>
  </div>
</div>
`;
